<resources>
    <string name="app_name">UGO CSMI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="choose_utility">Choose Utility</string>
    <string name="lbl_login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="select_utility">Select Utility</string>
    <string name="enter_login_id">Enter Login Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="filter_type">Search Type</string>
    <string name="select_filter_type">Please select Search Type.</string>
    <string name="consumer_no">Consumer No.</string>
    <string name="survey_type">Survey Type</string>
    <string name="enter_consumer_no">Enter Consumer Number.</string>
    <string name="enter_consumer_acc_meter_no">Enter Consumer Account / Meter Number.</string>
    <string name="enter_correct_acc_no">Enter Correct Account Number.</string>
    <string name="enter_correct_meter_no">Enter Correct Meter Number.</string>
    <string name="consumer_not_exists">Consumer not exists</string>
    <string name="dt_not_exists">DTR Not Indexed</string>
    <string name="feeder_not_exists">Feeder Not Indexed</string>
    <string name="could_not_find_account_no">Couldn\'t find Account No. : XXXXXXXXX</string>
    <string name="could_not_find_dt_no">Couldn\'t find DT : XXXXXXXXX</string>
    <string name="please_recheck">Please Re-check/ Proceed.</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_ci">CI Dashboard</string>
    <string name="dashboard_mi">MI Dashboard</string>
    <string name="consumer_index">Consumer Indexing</string>
    <string name="search_consumer_index">Search Consumer Indexing</string>
    <string name="meter_install">Meter Installation</string>
    <string name="search_meter_install">Search Meter Installation</string>
    <string name="download_data">Download Data</string>
    <string name="profile">Profile</string>
    <string name="monday_16_mar_2020">Monday, 16 Mar 2020</string>
    <string name="today_completed">Today\'s Completed</string>
    <string name="partial_completed">Partial Completed</string>
    <string name="ci_visit">Consumer Indexing Visit</string>
    <string name="mi_visit">Meter Installation Visit</string>
    <string name="todayVisit">Today\'s Visit</string>
    <string name="pendingConsumer">Pending Consumers</string>
    <string name="new_completed">New Completed</string>
    <string name="txt_ins">Note: Kindly <font color="#BD4328">SYNC OUT</font> your data after completion of work.</string>
    <string name="sync_out">CLICK TO SYNC OUT</string>
    <string name="sync_master_data">SYNC MASTER DATA</string>
    <string name="sync_in">SYNC IN</string>
    <string name="general_remark">General Remarks</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="consumer_info">Consumer Info</string>
    <string name="installation_date_mi">Installation Date</string>
    <string name="sc_no">Sc No.</string>
    <string name="name">Consumer Name </string>
    <string name="name_prev">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address">Address</string>
    <string name="division">Division</string>
    <string name="subdivision">Subdivision</string>
    <string name="substation">Substation</string>
    <string name="feeder_name_code">Feeder Name </string>
    <string name="other_feeder_name">Other Feeder Name</string>
    <string name="other_substation_name">Other Substation Name</string>
    <string name="dtr_name">DTR Name</string>
    <string name="other_dtr_name">Other DTR Name</string>
    <string name="pole_no">Pole No.</string>
    <string name="meter_on_pole">Meters at Pole</string>
    <string name="existing_meter_details">Old Meter Details</string>
    <string name="meter_details">Meter Details</string>
    <string name="meter_no">Meter No.</string>
    <string name="reading_kwh_kvah">Reading (KWH/ KVAH)</string>
    <string name="mf">MF</string>
    <string name="make_port">Make (Port)</string>
    <string name="type">Type</string>
    <string name="addition_details">Additional Details</string>
    <string name="survey_date">Survey Date</string>
    <string name="captured_by">Captured By</string>
    <string name="remarks">Remarks</string>
    <string name="mco">MCO No.</string>
    <string name="mrn">MRN</string>
    <string name="latitude_longitude">Latitude- Longitude</string>
    <string name="meter_box_status">Meter Box Status</string>
    <string name="meter_box_seal_status">Meter Box Seal Status</string>
    <string name="meter_inside">Meter Inside</string>
    <string name="meter_installation_feasibility">Meter Installation Feasibility</string>
    <string name="discom_cable_work_required">Discom Cable Work Required</string>
    <string name="finish">Finish</string>
    <string name="finish_print">Finish + Print</string>
    <string name="ok">OK</string>
    <string name="old_meter_no">Old Meter No.</string>
    <string name="admin_hierarchy">Admin Hierarchy</string>
    <string name="network_hierarchy">Network Hierarchy</string>
    <string name="network_info">Network Info</string>
    <string name="operator">Sim 1 Operator</string>
    <string name="operator2">Sim 2 Operator</string>
    <string name="operator_sim">Sim Operator</string>
    <string name="signal_strength1">Sim 1 Signal Strength</string>
    <string name="signal_strength2">Sim 2 Signal Strength</string>
    <string name="connection_type">Connection Type</string>
    <string name="location">Location</string>
    <string name="proceed">Proceed</string>
    <string name="mobile_number">Mobile Number </string>
    <string name="email_id">Email ID</string>
    <string name="network_hierarchy_details">Network Hierarchy Details</string>
    <string name="meter_make">Meter Make</string>
    <string name="meter_make_prev">Meter Make</string>
    <string name="old_meter_make">Old Meter Make </string>
    <string name="old_meter_make_prev">Old Meter Make</string>
    <string name="new_meter_make">New Meter Make</string>
    <string name="new_meter_make_prev">New Meter Make</string>
    <string name="meter_type">Meter Type</string>
    <string name="old_meter_type">Old Meter Type</string>
    <string name="old_phase_type">Old Phase Type</string>
    <string name="new_phase_type">New Phase Type</string>
    <string name="new_phase_type_man">New Phase Type</string>
    <string name="meter_location">Meter Location</string>
    <string name="meter_location_man">Meter Location <font color='#f32013'>*</font></string>
    <string name="ping_status">Ping Status</string>
    <string name="port_type">Port Type</string>
    <string name="meter_mf">Meter MF</string>
    <string name="cumulative_kwh">Cumulative (KWH)</string>
    <string name="meter_reading_in_kwh">Meter Reading (KWH)</string>
    <string name="meter_reading_in_kvah">Meter Reading (KVAH)</string>
    <string name="final_meter_reading_kwh">Reading (KWH)</string>
    <string name="final_meter_reading_kvah">Reading (KVAH)</string>
    <string name="final_meter_reading_kw">Reading (KW)</string>
    <string name="final_meter_reading_kva">Reading (KVA)</string>
    <string name="final_meter_reading_kvarh">Reading (KVARh)</string>
    <string name="final_meter_reading_mwh_prev">Reading (MWh) </string>
    <string name="final_meter_reading_mvah_prev">Reading (MVAh) </string>
    <string name="final_meter_reading_mw_prev">Reading (MW) </string>
    <string name="final_meter_reading_mva_prev">Reading (MVA) </string>
    <string name="final_meter_reading_mvarh_prev">Reading (MVARh) </string>
    <string name="final_meter_reading_mwh">Reading (MWh) <font color='#f32013'>*</font></string>
    <string name="final_meter_reading_mvah">Reading (MVAh) <font color='#f32013'>*</font></string>
    <string name="final_valid_meter_reading">Please enter valid Reading.</string>
    <string name="valid_initial_reading">Please enter valid Initial Reading.</string>
    <string name="final_valid_meter_reading_kwh">Please enter valid Reading (KWH).</string>
    <string name="final_valid_meter_reading_kvah">Please enter valid Reading (KVAH).</string>
    <string name="initial_valid_reading_kwh">Please enter valid Initial Reading (KWH).</string>
    <string name="initial_valid_reading_kvah">Please enter valid Initial Reading (KVAH).</string>
    <string name="max_demand_kw">Max Demand (KW)</string>
    <string name="max_demand_kva">Max Demand (KVA)</string>
    <string name="other_details">Other Details</string>
    <string name="meter_status">Meter Status</string>
    <string name="meter_status_prev">Meter Status</string>
    <string name="choose_multiple">Choose Multiple</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="you_re_offline">You\'re offline.</string>
    <string name="check_your_connection_settings">Check your connection Settings.</string>
    <string name="retry">Retry</string>
    <string name="title">Title</string>
    <string name="user_message">User Message</string>
    <string name="cancel">Cancel</string>
    <string name="action_ok">Ok</string>
    <string name="uploading_data">Uploading Data...</string>
    <string name="billing">Billing</string>
    <string name="distribution">Distribution</string>
    <string name="logout">Logout</string>
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
    <string name="location_not_found">Location Not Found!</string>
    <string name="fetching">Searching...</string>
    <string name="please_re_check_or_proceed">Please Re-check/Proceed.</string>
    <string name="consumer_not_exist">Consumer Not Exist</string>
    <string name="user_not_exist">User Not Exist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dtr_name_code">DTR Name</string>
    <string name="dtr_name_code_prev">DTR Name</string>
    <string name="consumer_category">Consumer Category</string>
    <string name="installationStatus">Installation Status</string>
    <string name="consumer_category_prev">Consumer Category</string>
    <string name="consumer_category_name">Consumer Category Name</string>
    <string name="consumer_status">Consumer Type</string>
    <string name="consumer_status_prev">Consumer Type</string>
    <string name="consumer_address">Consumer Address</string>
    <string name="meter_load">Meter Load</string>
    <string name="old_meter_details">Old Meter Details</string>
    <string name="unmetered_consumer"><font color="#000000">Note : - This Consumer is Unmetered.</font> </string>
    <string name="new_meter_details">New Meter Details</string>
    <string name="old_meter_serial_no">Old Meter Serial No.</string>
    <string name="old_meter_serial_no_prev">Old Meter Serial No.</string>
    <string name="new_meter_serial_no">New Meter Serial No.</string>
    <string name="new_meter_serial_no_prev">New Meter Serial No.</string>
    <string name="SimCardNo">Sim Card No.</string>
    <string name="SimCardNo_prev">Sim Card No. </string>
    <string name="IMEINo_prev">IMEI No. </string>
    <string name="initialReadingKwh">Initial Reading (KWH)</string>
    <string name="initialReadingKvah">Initial Reading (KVAH)</string>
    <string name="reached_time">"Reached Time : "</string>
    <string name="meter_no_relay">Meter No : </string>
    <string name="relay_operation">Relay Operation : </string>
    <string name="accountid">Account ID :</string>
    <string name="_29xxxx092">TEST123456</string>
</resources>